--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Verdana,'Times New Roman', Arial, sans-serif, Arial;
+    font-family: sans-serif, Arial;
     font-weight: 300;
     font-size: 1.4rem;
     background-color: #444;
